--- a/front-end/[bloco-01]-introdução-ao-front-end-e-JS-assíncrono/dia-01-ambiente-de-desenvolvimento/exercises/package.json
+++ b/front-end/[bloco-01]-introdução-ao-front-end-e-JS-assíncrono/dia-01-ambiente-de-desenvolvimento/exercises/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite --open",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js"
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "@douglasbacelar",
@@ -20,3 +21,4 @@
     "eslint": "^8.31.0"
   }
 }
+                                   
