--- a/front-end/[bloco-01]-introdução-ao-front-end-e-JS-assíncrono/dia-02-Java-script-assincrono-promeses-e-fetch/course/package.json
+++ b/front-end/[bloco-01]-introdução-ao-front-end-e-JS-assíncrono/dia-02-Java-script-assincrono-promeses-e-fetch/course/package.json
@@ -4,9 +4,18 @@
   "description": "",
   "main": "js.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite --open",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "vite": "^4.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.31.0"
+  },
+  "type": "module"
 }
